work on dissertation

--- a/doc/diagrams/cell_indices/diagram.tex
+++ b/doc/diagrams/cell_indices/diagram.tex
@@ -9,5 +9,5 @@
 \input{../../dissertation/content/newcommands.tex}
 \renewcommand{\diagramdirectory}{..}
 \begin{document}
-\input{shared_support}
+\input{cell_indices}
 \end{document}
