--- a/doc/dissertation/chapter2.tex
+++ b/doc/dissertation/chapter2.tex
@@ -36,6 +36,7 @@
 %===============================================================================
 \section{Low-Order Scheme for Scalar Conservation Laws}\label{sec:low_order_scalar}
 %===============================================================================
+\input{content/low_order/intro_scalar}
 \subsection{Low-Order Viscosity\label{sec:low_order_viscosity_scalar}}
   \input{content/low_order/low_order_viscosity_scalar}
 \subsection{Low-Order System\label{sec:low_order_scheme_scalar}}
