--- a/doc/dissertation/content/discretization/ssprk.tex
+++ b/doc/dissertation/content/discretization/ssprk.tex
@@ -1,46 +1,79 @@
-Strong Stability-Preserving Runge Kutta (SSPRK) methods are a class of multistage
+Strong Stability-Preserving Runge Kutta (SSPRK) methods are a subclass of
 Runge Kutta methods that offer high-order accuracy while preserving stability.
-The subset of SSPRK methods considered in this research conform to the
-following form for a given time step $\timevalue^\timeindex\rightarrow
-\timevalue^{\timeindex+1}$,
-where $\RKstagesolution^i$ denotes the $i$th stage solution:
+Suppose that one wants to integrate the following ODE system:
 \begin{equation}
-  \RKstagesolution^i = \RKoldsolutioncoef_i\RKstagesolution^0
-  + \RKstagesolutioncoef_i\RKintermediatesolution^i \eqc
+  \ddt{\solutionvector} = \mathbf{G}(t,\solutionvector(t)) \eqp
 \end{equation}
-where $\timestepsize=\timevalue^{\timeindex+1}-\timevalue^\timeindex$,
-$\RKstagesolution^0=\solutionvector^\timeindex$, and
-$\RKintermediatesolution^i$ is the solution of the following forward Euler
-step:
+For example, the function $\mathbf{G}(t,\solutionvector(t))$ corresponding
+to Equation \eqref{eq:semidiscrete} is
 \begin{equation}
-   \massmatrix\RKintermediatesolution^i = \massmatrix\RKstagesolution^{i-1}
-   + \timestepsize(\ssrhs(\RKstagetime_i)
-   - \ssmatrix(\RKstagetime_i)\RKstagesolution^{i-1}) \eqc
+  \mathbf{G}(t,\solutionvector(t)) = (\consistentmassmatrix)^{-1}
+    \pr{\ssrhs(t) - \ssmatrix\solutionvector(t)} \eqp
 \end{equation}
-where $\RKstagetime_i = \timevalue^\timeindex+\RKtimecoef_i\timestepsize$,
-$\massmatrix$ is the mass matrix, $\ssrhs(\timevalue)$ is the steady-state
-right hand side vector, and $\ssmatrix(\timevalue)$ is the steady-state matrix.
-Therefore the function performs a time step that is similar to an explicit
-Euler step, except that the steady-state residual is not necessarily evaluated
-at time $\timevalue^\timeindex$. The new solution
-$\solutionvector^{\timeindex+1}$ is the final stage solution:
+In $\alpha$-$\beta$ notation, SSPRK methods can be described by the following
+steps:
+\begin{subequations}
+\begin{align}
+  & \RKstagesolution^0 = \solutionvector^n \eqc \\
+  & \RKstagesolution^i = \sum\limits_{j=1}^{i-1} \sq{
+      \alpha\ij\RKstagesolution^{j-1}
+      + \dt\beta\ij\mathbf{G}(t^n+c_j\dt, \RKstagesolution^{j-1})}
+    \eqc \quad
+    i = 1,\ldots,s
+    \eqc \\
+  & \solutionvector^{n+1} = \RKstagesolution^s \eqc
+\end{align}
+\end{subequations}
+where $s$ is the number of stages of the method, and $\alpha$, $\beta$, and $c$
+are coefficient arrays corresponding to the particular SSPRK method.
+Results in this dissertation use two SSPRK methods: the forward (explicit) Euler
+method, and the 3-stage, 3rd-order-accurate Shu-Osher scheme, hereafter
+referred to as SSPRK33. The SSPRK33 method has the following coefficients:
 \begin{equation}
-   \solutionvector^{\timeindex+1} = \RKstagesolution^\RKnstages \eqc
+  \alpha = \left[\begin{array}{c c c}
+    1           &             & \\
+    \frac{3}{4} & \frac{1}{4} & \\
+    \frac{1}{3} & 0           & \frac{2}{3}
+    \end{array}\right] \eqc \quad
+  \beta = \left[\begin{array}{c c c}
+    1           &             & \\
+    0           & \frac{1}{4} & \\
+    0           & 0           & \frac{2}{3}
+    \end{array}\right] \eqc \quad
+  c = \left[\begin{array}{c}
+    0           \\
+    1           \\
+    \frac{1}{2}
+    \end{array}\right] \eqp
 \end{equation}
-where $\RKnstages$ is the number of stages for the scheme.
-
-The Explicit Euler scheme can be expressed as a 1-stage SSPRK method with
-with the following coefficients:
+Alternatively, the SSPRK methods used in this dissertation can be expressed
+in the form
+\begin{subequations}
+\begin{align}
+  & \RKstagesolution^0 = \solutionvector^n \eqc \\
+  & \RKstagesolution^i = \gamma_i \solutionvector^n + \zeta_i \sq{
+      \RKstagesolution^{i-1}
+      + \dt\mathbf{G}(t^n+c_i\dt, \RKstagesolution^{i-1})}
+    \eqc \quad
+    i = 1,\ldots,s
+    \eqc \\
+  & \solutionvector^{n+1} = \RKstagesolution^s \eqp
+\end{align}
+\end{subequations}
+This form makes it clear that these methods can be expressed as a linear
+combination of steps resembling a forward Euler step, except that quantities
+with explicit time dependence are not always evaluated at the time
+corresponding to the beginning of the step. This allows the methodology
+developed for forward Euler in this research to be directly extended to these
+SSPRK methods.  This includes, for example, the FCT methodology described in
+Sections \ref{sec:fct_scalar} and \ref{sec:fct_systems}.
+In the $\gamma$-$\zeta$ notation, the coefficient arrays for SSPRK33 are
 \begin{equation}
-   \RKoldsolutioncoef_1 = 0\qquad\RKstagesolutioncoef_1 = 1\qquad \RKtimecoef_1
-   = 0 \eqc
-\end{equation}
-and the 3-stage, 3rd-order accurate SSPRK scheme (also known as the Shu-Osher
-scheme), has the following coefficients:
-\begin{equation}
-  \RKoldsolutioncoef = \left[\begin{array}{c}
+  \gamma = \left[\begin{array}{c}
     0\\\frac{3}{4}\\\frac{1}{3}\end{array}\right]
-  \qquad\RKstagesolutioncoef = \left[\begin{array}{c}
+  \eqc \quad
+  \zeta = \left[\begin{array}{c}
     1\\\frac{1}{4}\\\frac{2}{3}\end{array}\right]
-  \qquad c = \left[\begin{array}{c}0\\1\\\frac{1}{2}\end{array}\right] \eqp
+  \eqc \quad
+  c = \left[\begin{array}{c}0\\1\\\frac{1}{2}\end{array}\right] \eqp
 \end{equation}
