--- a/doc/dissertation/nomenclature.tex
+++ b/doc/dissertation/nomenclature.tex
@@ -57,9 +57,12 @@ FEM   & finite element method\\
 FV    & finite volume\\
 IVP   & initial value problem\\
 LED   & local extremum diminishing\\
+ODE   & ordinary differential equation\\
+PDE   & partial differential equation\\
 RK    & Runge-Kutta\\
 SS    & steady-state\\
 SSPRK & strong stability-preserving Runge-Kutta\\
+SSPRK33 & 3-stage, 3-order-accurate SSPRK scheme, also known as the Shu-Osher method\\
 \end{mytable}
 
 \begin{center}
