more dissertation work

--- a/doc/dissertation/chapter2.tex
+++ b/doc/dissertation/chapter2.tex
@@ -43,13 +43,17 @@
   \input{content/low_order/low_order_scheme_scalar}
 \subsection{M-Matrix Property\label{sec:m_matrix}}
   \input{content/low_order/m_matrix}
-\subsection{Discrete Maximum Principles\label{sec:DMP}}
+\subsection{Positivity Preservation\label{sec:positivity_preservation}}
+  \input{content/low_order/positivity_preservation}
+\subsection{Local Discrete Maximum Principles\label{sec:DMP}}
+  \input{content/low_order/dmp_intro}
   \input{content/low_order/steadystate_DMP}
   \input{content/low_order/explicit_DMP}
   \input{content/low_order/theta_DMP}
 %===============================================================================
 \section{Low-Order Scheme for Conservation Law Systems}\label{sec:low_order_system}
 %===============================================================================
+\input{content/low_order/intro_system}
 \subsection{Invariant Domains\label{sec:invariant_domains}}
   \input{content/low_order/invariant_domain}
 \subsection{Low-Order System\label{sec:low_order_scheme_system}}
