--- a/doc/dissertation/content/preliminaries/scalar.tex
+++ b/doc/dissertation/content/preliminaries/scalar.tex
@@ -8,7 +8,7 @@ for any scalar conservation law of the following form:
 where $\scalarsolution\xt$ is a general scalar conserved quantity at position
 $\x$ and time $\timevalue$, $\consfluxscalar$ is a general flux
 function,
-$\reactioncoef\xt$ is a reaction term, and $\scalarsource\xt$ is a source
+$\reactioncoef \xt\geq 0$ is a reaction coefficient, and $\scalarsource\xt \geq 0$ is a source
 term.
 Note that traditional FCT methodology does not consider the
 the presence of the reaction term $\reactioncoef\xt \scalarsolution\xt$
