--- a/doc/dissertation/content/low_order/theta_DMP.tex
+++ b/doc/dissertation/content/low_order/theta_DMP.tex
@@ -1,15 +1,13 @@
-\begin{theorem}{Theta Scheme Discrete Maximum Principle}
-If the CFL-like condition
-\begin{equation}\label{eq:theta_cfl}
+\begin{theorem}{Theta Scheme Local Discrete Maximum Principle}
+If the time step size $\dt$ satisfies Equation \eqref{eq:theta_cfl},
+\[
    \timestepsize \leq \frac{\massmatrixletter^L_{i,i}}{(1-\theta)
-     \ssmatrixletter_{i,i}^{L,\timeindex}}\quad\forall i
-   \qquad\Longleftrightarrow\qquad
-   1 - \frac{(1-\theta)\timestepsize}{\massmatrixletter^L_{i,i}}
-     \ssmatrixletter_{i,i}^{L,\timeindex}
-     \geq 0\quad\forall i
-\end{equation}
-is satisfied, then the low-order solution obtained using the Theta scheme
-satisfies the following discrete maximum principle:
+     \ssmatrixletter_{i,i}^{L,\timeindex}}
+   \eqc\quad\forall i \eqc
+\]
+then the solution of the Theta low-order system given
+by Equation \eqref{eq:low_theta}
+satisfies the following local discrete maximum principle:
 \begin{subequations}\label{eq:theta_dmp}
 \begin{equation}
   \DMPlowerbound_i(\solutionvector^{L,n+1})
@@ -27,9 +25,9 @@ satisfies the following discrete maximum principle:
      \\
      - \frac{\timestepsize}{\massmatrixletter^L_{i,i}}\pr{
        (1-\theta)\sumjnoti\ssmatrixletter_{i,j}^{L,\timeindex}
-         \solutionletter_{\max,j\ne i}^\timeindex
+         \solutionletter_{\substack{\max\\\min},j\ne i}^\timeindex
        + \theta\sumjnoti\ssmatrixletter_{i,j}^{L,\timeindex+1}
-         \solutionletter_{\max,j\ne i}^{\timeindex+1}}
+         \solutionletter_{\substack{\max\\\min},j\ne i}^{\timeindex+1}}
      \\
      + \frac{\timestepsize}{\massmatrixletter^L_{i,i}}
        \pr{(1-\theta)\ssrhsletter_i^\timeindex
@@ -41,11 +39,8 @@ where
   \solutionletter_{\substack{\max\\\min},j\ne i}^\timeindex
   \equiv \substack{\max\\\min\limits_{j\ne i\in\indicescell[\support_i]}}
     \solutionletter_j^\timeindex
-  \eqc
+  \eqp
 \]
-and $\indicescell[\support_i]$
-is the set of indices of degrees of freedom in the
-support of degree of freedom $i$.
 \end{theorem}
 \begin{proof}
 Evaluating row $i$ of the low-order Theta system, given by Equation
